2010-07-26 j.m.reneau <renejm@users.sourceforge.net> 0.9.6w
	* added decimal statemene to define maximum number of decimal places to display
          (full precision of a double is still being maintained behind the scenes)
	* fixed web site on about box
	* added recent new statements to syntax highliter

2010-07-20 j.m.reneau <renejm@users.sourceforge.net> 0.9.6v
	* fixed several gramatical errors with file messages - thanks joel
	* removed maximum size of graphical output widget

2010-07-13 j.m.reneau <renejm@users.sourceforge.net> 0.9.6u
	* fixed wavwait logic for compile under Win32.  Also noticed in the QSound documentation
	  that wavwait will not work under Windows because of a quirk with the library.
	* made the graphics and text output so that they may float

2010-07-04 j.m.reneau <renejm@users.sourceforge.net> 0.9.6t
	* added new wavwait statement to wait for the currently playing wav to finish

2010-07-02 j.m.reneau <renejm@users.sourceforge.net> 0.9.6s
	* totally re-wrote linux sound functionallity to use the SDL library and SDL_mixer.  Resolved issued with QSound (requiring NAS) and the /dev/dsp not being released bu the TTS libraries.

2010-06-25 j.m.reneau <renejm@users.sourceforge.net> 0.9.6r
	* added currentdir and changedir statements to manage the current folder
	* moved documentation to WIKI at doc.basic256.org and changed link in documentwindow.

2010-06-25 j.m.reneau <renejm@users.sourceforge.net> 0.9.6q
	* found read statement removed from LEX - readded
	* fixed string pointer conversion in readline
	* changed sprite move to limit range to 0-graphwidth|graphheight-1
	* changed all file io statements to allow for 0-7 files simultaneously - syntax didn't change for single file operations but new
		filenumber parameter added to allow for multiple files

2010-06-14 j.m.reneau <renejm@users.sourceforge.net> 0.9.6p
	* re-wrote the way color "Clear" works